--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "vuepress": "^0.14.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
